--- a/sample/sample033/src/main/resources/application.properties
+++ b/sample/sample033/src/main/resources/application.properties
@@ -6,3 +6,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # enable sql init for schema.sql, data.sql
 spring.sql.init.mode=always
 spring.sql.init.encoding=utf-8
+
+logging.level.com.example.sample033.mapper.MemberMapper=TRACE
+logging.level.com.example.sample033.mapper.ArticleMapper=TRACE
