--- a/sample/sample034/src/main/resources/application.properties
+++ b/sample/sample034/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # JPA SQL ?? ?? ? ??? ?? ?? ?? ?? ??? ?????.
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=myuser
+spring.datasource.password=mypass
+spring.jpa.hibernate.ddl-auto=create
